[package]
name = "web-docker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0.136"
serde = "1.0.136"
log = "0.4.16"
prettyprint = "0.8.1"
pretty_env_logger = "0.4.0"
tokio-stream = "0.1.8"
futures-util = "0.3.21"